@@ -8,9 +8,9 @@
 	<status>RC1</status>
 	<status>Beta</status>
 	
-	<build>Build 3620</build>
+	<build>Build 3632</build>
 	<name>toendaCMS</name>
 	<tagline>Your ideas ahead</tagline>
-	<release_date>02.12.2007 - 14:59</release_date>
+	<release_date>05.12.2007 - 15:49</release_date>
 	<toenda_copyright>2003 - 2007</toenda_copyright>
 </version>
