@@ -29,7 +29,7 @@ Developer Version
 	- 1.6.0 Development / Stable
 	- 1.6.1 Stable
 
-Building Steps: 3620
+Building Steps: 3632
 
 
 
@@ -43,7 +43,8 @@ Building Steps: 3620
  - bug fixed: Fixed a bug which replace the http:// of a image link in content data if seo is
               enabled and the cms is installed in root level.
 
- - changed: 
+ - changed: Sitetitle now with the title of the document page and the description of the document
+            page is now in the metag tag.
 
  - added: Another view for the mediamanager. We can now disply the content of the media manager
           with a icon and new a list view.
